# django-ws

./: README.md  pyproject.toml
mysite/: admin.py  asgi.py  settings.py  urls.py
mysite/migrations/: 0001_initial.py
mysite/templates/mysite/: index.html
mysite/ws/: asgi.py  connection.py
