[tool.poetry]
name = "django-ws"
version = "0.1.0"
description = "Django project with websocket implementation"
authors = ["Kamal Mustafa <k4ml@github.io>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
